<resources>
    <string name="app_name">SDaily</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dialog_title_column">Название</string>
    <string name="untitled">без названия</string>
    <string name="delete_label">Удалить</string>
    <string name="dialog_description" > Описание</string>
    <string name="dialog_item_begin">Начало</string>
    <string name="dialog_item_finish">Конец</string>
    <string name="add">добавить</string>
    <string name="Ru_complete">Выполнить</string>
    <string name="En_timetable">Timetable</string>
    <string name="En_task">Task</string>
    <string name="En_goal">Goal</string>
    <string name="En_name">Name</string>
    <string name="Ru_duration">Продолжительность</string>
    <string name="ru_cancel">закрыть</string>
    <string name="Ru_apply">готово</string>
    <string name="Monday">ПН</string>
    <string name="Tuesday">ВТ</string>
    <string name="Wednesday">СР</string>
    <string name="Thursday">ЧТ</string>
    <string name="Friday">ПТ</string>
    <string name="Saturday">СБ</string>
    <string name="Sunday">ВС</string>
    <string name="January">Январь</string>
    <string name="monday">понедельник</string>
    <string name="tuesday">вторник</string>
    <string name="wednesday">среда</string>
    <string name="thursday">четверг</string>
    <string name="friday">пятница</string>
    <string name="saturday">суббота</string>
    <string name="sunday">воскресенье</string>
    <string name="alarm_intersection">Внимание! Пересечения в расписании</string>
    <string name="save">сохранить</string>
    <string name="cancel">отмена</string>
    <string name="exit">выход</string>
    <string name="High">Высокий</string>
    <string name="Medium">Средний</string>
    <string name="Low">Низкий</string>
    <string-array name="months">
        <item></item>
        <item>Январь</item>
        <item>Февраль</item>
        <item>Март</item>
        <item>Апрель</item>
        <item>Май</item>
        <item>Июнь</item>
        <item>Июль</item>
        <item>Август</item>
        <item>Сентябрь</item>
        <item>Октябрь</item>
        <item>Ноябрь</item>
        <item>Декабрь</item>
    </string-array>
    <string-array name="week">
        <item></item>
        <item>Понедельник</item>
        <item>Вторник</item>
        <item>Среда</item>
        <item>Четверг</item>
        <item>Пятница</item>
        <item>Суббота</item>
        <item>Воскресенье</item>
    </string-array>
    <string name="Error">У Вас уже есть задача на это время</string>
</resources>